thirty second step to new crm